disclaimer op voorpagina

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -106,9 +106,9 @@
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
             <div class="col" style="padding: 0; margin-right:10px;">
-                <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
+                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                             <h4 class="text-black">Problem</h4>
                             <p class="mb-1 text-black-50">
                             In times of COVID-19, it is very difficult for healthcare professionals to communicate with deaf patients.
@@ -125,9 +125,9 @@
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
             <div class="col" style="padding: 0; margin:0px;">
-                <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
+                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                             <h4 class="text-black">How does this website help?</h4>
                             <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
@@ -141,8 +141,8 @@
             <!-- Funding -->
             <div class="col" style="padding: 0; margin-left:10px;">
                 <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                           <h4>Funding</h4>
                           <p class="mb-1 text-black-50">
                             We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
@@ -159,9 +159,9 @@
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
           <!-- Disclaimer -->
             <div class="col" style="padding: 0; margin:0px;">
-                <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
+                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                           <h4>Disclaimer</h4>
                           <p class="mb-1 text-black-50">
                             <b>Important: caution required in the use of signing avatars</b>
