disclaimer op voorpagina

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -156,7 +156,7 @@
 
         </div>
 
-        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:20px;">
           <!-- Disclaimer -->
             <div class="col" style="padding: 0; margin:0px;">
                 <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
