--- a/covid19/index.html
+++ b/covid19/index.html
@@ -104,7 +104,7 @@
 <section class="projects-section bg-light" id="ProjectInfo">
     <div class="container-fluid">
         <!-- Challenge Row-->
-        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;>
             <div class="col" style="padding: 0; margin-right:40px;">
                 <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
                     <div class="d-flex h-100" style="padding: 0; margin:0px;">
