alle top-margins van alle container-fluid aangepast

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -191,7 +191,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%;">
+    <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%; margin-top: 20px;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -337,7 +337,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light" id="About">
 
-    <div class="container-fluid" height="100%">
+    <div class="container-fluid" height="100%" style="margin-top:20px;">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -424,7 +424,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-white" id="Suggestions">
-      <div class="container-fluid" height="100%">
+      <div class="container-fluid" height="100%" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
             <div class="col-xl-auto">
@@ -449,7 +449,7 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-light" id="Resources">
+<section class="projects-section bg-light" id="Resources" style="margin-top:20px;">
       <div class="container-fluid" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
