alle top-margins van alle container-fluid aangepast

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -190,8 +190,8 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white" id="Translate">
-    <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%; margin-top: 20px;">
+<section class="projects-section bg-white" id="Translate" style="padding: 0; margin:0px;">
+    <div class="container-fluid" height="100%" align="center">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -335,7 +335,7 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light" id="About">
+<section class="projects-section bg-light" id="About" style="padding: 0; margin:0px;">
 
     <div class="container-fluid" height="100%" style="margin-top:20px;">
 
