--- a/covid19/index.html
+++ b/covid19/index.html
@@ -190,7 +190,7 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white" id="Translate" style="padding: 0; margin:0px;">
+<section class="projects-section bg-white" id="Translate" style="margin:0px;">
     <div class="container-fluid" height="100%" align="center">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
