probeersel oplossen video en input weer naast elkaar

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -190,7 +190,7 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white" id="Translate" style="margin:0px;">
+<section class="projects-section bg-white" id="Translate" style="margin-top:0px;">
     <div class="container-fluid" height="100%" align="center">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
@@ -335,7 +335,7 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light" id="About" style="padding: 0; margin:0px;">
+<section class="projects-section bg-light" id="About" style="margin-top:0px;">
 
     <div class="container-fluid" height="100%" style="margin-top:20px;">
 
