fix video weer naast input en knoppen

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -191,7 +191,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate" style="margin-top:0px;">
-    <div class="container-fluid" height="100%" align="center">
+    <div class="container-fluid" height="100%" width="100%" align="center">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
