aligns vervangen door text-align

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -191,20 +191,20 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate" style="margin-top:0px;">
-    <div class="container-fluid" height="100%" width="100%" align="center">
+    <div class="container-fluid" style="width:100%; text-align:center;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
         <!--================================================================-->
 
-        <span id="videos" class="prerecorded" align="left" style="text-align: left;">
-          <iframe id="videoHolder" width="600" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
+        <span id="videos" class="prerecorded" style="text-align: left;">
+          <iframe id="videoHolder" style="width: 600px; height: 500px;" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left; display: none;"></span>
+        <span id="avatar" class="CWASAAvatar av0" style="text-align: left; display: none;"></span>
 
-        <span align="left" style="display:inline-block; vertical-align:top; margin:30px; text-align: left;">
+        <span style="display:inline-block; vertical-align:top; margin:30px; text-align:left;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose a translation option:</h4>
             </label>
@@ -301,7 +301,7 @@
         </span>
 
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
-        <div align="center" class="undisplayed">
+        <div style="text-align: center;" class="undisplayed">
 
               <span style="font-size: 90%;" >
                 Sign/Frame:
@@ -316,7 +316,7 @@
         </div>
 
 
-        <div align="center">
+        <div style="text-align: center;">
             <!-- FR: I've made the following status log field invisible, if you comment it out completely the avatar doesn't work anymore -->
             <textarea id="myStatusLog"  class="statusLog undisplayed" rows="6">
             </textarea>
@@ -327,7 +327,7 @@
 
         <!-- SToCA applet element panel -->
         <!--================================================================-->
-        <div class="SToCA" align="center" ></div>
+        <div class="SToCA" style="text-align: center;" ></div>
         <!--================================================================-->
     </div>
 </section>
@@ -337,7 +337,7 @@
 <!-- About us section -->
 <section class="projects-section bg-light" id="About" style="margin-top:0px;">
 
-    <div class="container-fluid" height="100%" style="margin-top:20px;">
+    <div class="container-fluid" style="margin-top:20px;">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -424,7 +424,7 @@
 
 <!-- Suggestions section -->
 <section class="projects-section bg-white" id="Suggestions">
-      <div class="container-fluid" height="100%" style="margin-top:20px;">
+      <div class="container-fluid" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
             <div class="col-xl-auto">
@@ -450,7 +450,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-light" id="Resources" style="margin-top:20px;">
-      <div class="container-fluid" height="100%">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 The
