fix video weer naast input en knoppen

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -198,7 +198,7 @@
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
         <!--================================================================-->
 
-        <span id="videos" class="prerecorded" style="text-align: left;">
+        <span id="videos" class="prerecorded" style="text-align: left; display: inline-block;">
           <iframe id="videoHolder" style="width: 600px; height: 500px;" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
