suggestions placeholder iets aangepast

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -431,7 +431,7 @@
               <div class="project-text pt-0 text-lg-left">
                 <h4>Suggestions</h4>
                   <p class="mb-3 text-black-50">
-                    Enter your suggestion here. If you have more than one word to suggest, separate them with ';'. <br>
+                    Enter your suggestion(s) for words or phrases or any other feedback you have here.<br>
                   </p>
                   <p class="mb-3 text-black-50">
                     <textarea id="suggestions" class="inputBox" rows="4" placeholder="Suggestion" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
