--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -141,9 +141,9 @@
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                            <h4 class="text-black">Financiëring</h4>
+                            <h4 class="text-black">Financiering</h4>
                             <p class="mb-1 text-black-50">
-                              Dankbaar erkennen we financiëring van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
+                              Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
                               <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programma</a>.
                             </p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
