--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -127,7 +127,7 @@
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                            <h4 class="text-black">Hoe helpt deze website?</h4>
+                            <h4 class="text-black">Hoe helpt deze tool?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
                             </p>
@@ -153,7 +153,31 @@
             </div>
         </div>
     </div>
-</section>
+
+
+    <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
+      <!-- Disclaimer -->
+        <div class="col" style="padding: 0; margin:0px;">
+            <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
+                <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                  <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
+                      <h4>Disclaimer</h4>
+                      <p class="mb-1 text-black-50">
+                        <b>Belangrijk: voorzichtigheid geboden in het gebruik van gebarende avatars</b>
+                        <br>
+                        De World Federation of the Deaf (WFD) en de World Association of Sign Language Interpreters (WASLI) waarschuwen voor het gebruik van gebarende avatars als vervanging van menselijke gebarentolken. De kwaliteit van gebarende avatars is veel minder dan de kwaliteit van gekwalificeerde menselijke gebarentolken. Maak daarom alleen gebruik van de avatar vertalingen die onze applicatie biedt in situaties waarin er absoluut geen menselijke gebarentolk ingezet kan worden en er ook geen video vertaling beschikbaar is. De volledige WFD/WASLI statement is <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">hier</a> te lezen.
+                        De Nederlandse Vereniging van Doven (Dovenschap)
+                        <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">ondersteunt</a>
+                        dit statement. Deze tool is daarom niet bedoeld om te dienen als een vervanging voor professionele gebarentolken, maar als back-up voor situaties waar een tolk niet aanwezig kan zijn. Hierdoor is de reikwijdte van zinnen die de tool kan vertalen zeer gelimiteerd.
+                      </p>
+                      <hr class="d-none d-lg-block mb-0 ml-0" />
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  </section>
 
 
 
@@ -161,18 +185,6 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%;">
-     <div id="alertZonMwTran" class="alertBox"></div>
-     <div style="display: flex; justify-content: center; align-items: center; text-align: center; margin-bottom: 20px;">
-      <p class="mb-1 text-black-50" style="display: inline-block; width: 60%;">
-         <b>Belangrijk: voorzichtigheid geboden in het gebruik van gebarende avatars</b>
-         <br>
-         De World Federation of the Deaf (WFD) en de World Association of Sign Language Interpreters (WASLI) waarschuwen voor het gebruik van gebarende avatars als vervanging van menselijke gebarentolken. De kwaliteit van gebarende avatars is veel minder dan de kwaliteit van gekwalificeerde menselijke gebarentolken. Maak daarom alleen gebruik van de avatar vertalingen die onze applicatie biedt in situaties waarin er absoluut geen menselijke gebarentolk ingezet kan worden en er ook geen video vertaling beschikbaar is. De volledige WFD/WASLI statement is <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">hier</a> te lezen.
-         De Nederlandse Vereniging van Doven (Dovenschap)
-         <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">ondersteunt</a>
-         dit statement.
-       </p>
-      </div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
