--- a/covid19/index.html
+++ b/covid19/index.html
@@ -128,7 +128,7 @@
                 <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
                     <div class="d-flex h-100" style="padding: 0; margin:0px;">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
-                            <h4 class="text-black">How does this website help?</h4>
+                            <h4 class="text-black">How does this tool help?</h4>
                             <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
                             </p>
@@ -166,7 +166,7 @@
                           <p class="mb-1 text-black-50">
                             <b>Important: caution required in the use of signing avatars</b>
                             <br>
-                            The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement. This tool is therefore not meant to serve as a replacement for trained sign language interpreters, but as a back-up for situations in which an interpreter cannot be present.
+                            The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement. This tool is therefore not meant to serve as a replacement for trained sign language interpreters, but as a back-up for situations in which an interpreter cannot be present. Therefore, the range of sentences that our tool can translate is very limited.
                           </p>
                           <hr class="d-none d-lg-block mb-0 ml-0" />
                       </div>
