--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -62,8 +62,8 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" style="width: 100%;">
-        <a class="navbar-brand js-scroll-trigger" href="../index-nl.html">
+    <div class="container-fluid" align="center">
+        <a class="navbar-brand" href="../index-nl.html">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
@@ -72,12 +72,12 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Informatie</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Vertaal</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Over Ons</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Suggestions">Suggesties</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Extra Informatie</a></li>
+            <ul class="navbar-nav ml-auto" role="tablist">
+                <li class="nav-item"><a class="nav-link active" role="tab" href="#ProjectInfo" onclick="openTab(event, 'ProjectInfo');">Project Informatie</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Vertaal</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#About" onclick="openTab(event, 'About');">Over Ons</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Suggestions" onclick="openTab(event, 'Suggestions');">Suggesties</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Extra Informatie</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html"><span class="flag-icon flag-icon-gb"></a></li>
             </ul>
         </div>
