--- a/covid19/index.html
+++ b/covid19/index.html
@@ -63,8 +63,8 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" style="width: 100%;">
-        <a class="navbar-brand js-scroll-trigger" href="../index.html">
+    <div class="container-fluid" align="center">
+        <a class="navbar-brand" href="../index.html">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
@@ -73,13 +73,13 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Information</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translate</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">About Us</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Suggestions">Suggestions</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further Resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="index-nl.html"><span class="flag-icon flag-icon-nl"></span></a></li>
+            <ul class="navbar-nav ml-auto" role="tablist">
+              <li class="nav-item"><a class="nav-link active" role="tab" href="#ProjectInfo" onclick="openTab(event, 'ProjectInfo');">Project Information</a></li>
+              <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Translate</a></li>
+              <li class="nav-item"><a class="nav-link" role="tab" href="#About" onclick="openTab(event, 'About');">About us</a></li>
+              <li class="nav-item"><a class="nav-link" role="tab" href="#Suggestions" onclick="openTab(event, 'Suggestions');">Suggestions</a></li>
+              <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Further Resources</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-nl.html"><span class="flag-icon flag-icon-nl"></span></a></li>
             </ul>
         </div>
     </div>
