--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -103,11 +103,11 @@
 <section class="projects-section bg-light" id="ProjectInfo">
   <div class="container-fluid">
       <!-- Challenge Row-->
-      <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
-          <div class="col-lg">
-                <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+      <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
+          <div class="col" style="padding: 0; margin-right:40px;">
+            <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
+                <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                    <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                             <h4 class="text-black">Probleem</h4>
                             <p class="mb-1 text-black-50">
                             In tijden van COVID-19 is het voor artsen en verpleegkundigen erg lastig om te communiceren met dove patienten.
@@ -123,10 +123,10 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg">
-                <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+            <div class="col" style="padding: 0; margin:0px;">
+                <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
+                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                             <h4 class="text-black">Hoe helpt deze tool?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
@@ -137,10 +137,10 @@
                 </div>
             </div>
 
-            <div class="col-lg">
+            <div class="col" style="padding: 0; margin-left:40px;">
                 <div class="bg-light text-center h-100 project">
-                    <div class="d-flex h-100">
-                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                    <div class="d-flex h-100" style="padding: 0; margin:0px;">
+                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
                             <h4 class="text-black">Financiering</h4>
                             <p class="mb-1 text-black-50">
                               Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
