--- a/covid19/index.html
+++ b/covid19/index.html
@@ -64,7 +64,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid" align="center">
-        <a class="navbar-brand" href="../index.html">
+        <a class="navbar-brand" href="#page-top">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
@@ -101,8 +101,8 @@
 <!--================================================================-->
 
 <!-- ProjectInfo -->
-<section class="projects-section bg-light" id="ProjectInfo">
-    <div class="container-fluid">
+<section class="projects-section bg-light fadeIn" id="ProjectInfo">
+    <div class="container-fluid" align="center">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
             <div class="col" style="padding: 0; margin-right:40px;">
@@ -190,7 +190,7 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white" id="Translate" style="margin-top:0px;">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:0px;">
     <div class="container-fluid" style="width:100%; text-align:center;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
@@ -335,7 +335,7 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light" id="About" style="margin-top:0px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:0px;">
 
     <div class="container-fluid" style="margin-top:20px;">
 
@@ -423,7 +423,7 @@
 <!--================================================================-->
 
 <!-- Suggestions section -->
-<section class="projects-section bg-white" id="Suggestions">
+<section class="projects-section bg-white fadeIn undisplayed" id="Suggestions"  style="margin-top:20px;">
       <div class="container-fluid" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
@@ -449,8 +449,8 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-light" id="Resources" style="margin-top:20px;">
-      <div class="container-fluid">
+<section class="projects-section bg-light fadeIn undisplayed" id="Resources" style="margin-top:20px;">
+      <div class="container-fluid" style="margin-top:20px;">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 The
