--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -100,7 +100,7 @@
 <!--================================================================-->
 
 <!-- ProjectInfo -->
-<section class="projects-section bg-light" id="ProjectInfo">
+<section class="projects-section bg-light fadeIn" id="ProjectInfo">
   <div class="container-fluid">
       <!-- Challenge Row-->
       <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
@@ -182,7 +182,7 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-white" id="Translate" style="margin-top:0px;">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" style="margin-top:0px;">
     <div class="container-fluid" style="width:100%; text-align:center;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
@@ -328,7 +328,7 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light" id="About" style="margin-top:0px;">
+<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:0px;">
 
     <div class="container-fluid" style="margin-top:20px;">
 
@@ -416,7 +416,7 @@
 <!--================================================================-->
 
 <!-- Suggestions section -->
-<section class="projects-section bg-white" id="Suggestions">
+<section class="projects-section bg-white fadeIn undisplayed" id="Suggestions" style="margin-top:20px;">
       <div class="container-fluid" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
@@ -442,8 +442,8 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-light" id="Resources" style="margin-top:20px;">
-      <div class="container-fluid">
+<section class="projects-section bg-light fadeIn undisplayed" id="Resources" style="margin-top:20px;">
+      <div class="container-fluid" style="margin-top:20px;">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 Het
