--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -63,7 +63,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid" align="center">
-        <a class="navbar-brand" href="../index-nl.html">
+        <a class="navbar-brand" href="#page-top">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
